syntax = "proto3";

package node;

option go_package = ".;node";

message Node {
    string id = 1;
    string model_key=2;
    string foo=3;
}

service NodeService{
    rpc RegisterNode(Node) returns (Node) {}
}
